<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myCustomColor"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/nav_header"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:background="@color/list_background">

        <LinearLayout
            android:id="@+id/ans_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="gone">

            <me.grantland.widget.AutofitTextView
                android:id="@+id/wQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:paddingBottom="@dimen/bottom_space"
                android:text="@string/heatLoss_ofTheWalls"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ans_size"
                autofit:minTextSize="@dimen/minTextSize"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/cQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:paddingBottom="@dimen/bottom_space"
                android:text="@string/heatLoss_ofTheCeiling"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ans_size"
                autofit:minTextSize="@dimen/minTextSize"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/fQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:paddingBottom="@dimen/bottom_space"
                android:text="@string/heatLoss_ofTheFloor"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ans_size"
                autofit:minTextSize="@dimen/minTextSize"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/winQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:paddingBottom="@dimen/bottom_space"
                android:text="@string/heatLoss_ofTheWindows"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ans_size"
                autofit:minTextSize="@dimen/minTextSize"/>

            <me.grantland.widget.AutofitTextView
                android:id="@+id/totalQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:maxLines="1"
                android:paddingBottom="@dimen/bottom_space"
                android:text="@string/heatLoss_full"
                android:textColor="@android:color/black"
                android:textSize="@dimen/ans_size"
                android:textStyle="bold"
                autofit:minTextSize="@dimen/minTextSize"/>
        </LinearLayout>

        <ListView
            android:id="@+id/err_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progress_bar_nav"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_gravity="bottom"
            android:background="@drawable/drop_shadow"/>
    </FrameLayout>

    <!--<Button
        android:id="@+id/cityBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/forBtns"
        android:textSize="15sp"/>-->
</LinearLayout>